--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,13 +1,13 @@
-{% load static %}
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static 'global/css/style.css' %}">
+    {% include "global/partials/head.html" %}
 </head>
 <body>
-    <h1>Título da página atual</h1>
+    {% include "global/partials/header.html" %}
+    <main class="content">
+        {% block content %}{% endblock content %}
+    </main>
 </body>
 </html>
