--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -8,6 +8,8 @@
     {% include "global/partials/header.html" %}
     <main class="content">
         {% block content %}{% endblock content %}
+        {% include "global/partials/pagination.html" %}
     </main>
+    
 </body>
 </html>
